fix responsive header z-index

--- a/css/_header.sass
+++ b/css/_header.sass
@@ -80,7 +80,7 @@
                 padding: 0 50px
                 padding-top: 30px
                 height: 200vh
-                z-index: 2
+                z-index: 4
                 background-color: $color-d
                 box-shadow: 5px 2px 15px -1px rgba(black,0.35)
 
