--- a/css/styles.css
+++ b/css/styles.css
@@ -256,7 +256,7 @@ h2 {
     padding: 0 50px;
     padding-top: 30px;
     height: 200vh;
-    z-index: 2;
+    z-index: 4;
     background-color: #ffffff;
     box-shadow: 5px 2px 15px -1px rgba(0, 0, 0, 0.35);
   }
